# DRF_kp7

./: Dockerfile  doker-compose.yaml  pyproject.toml
config/: settings.py
habits/: serializer.py  services.py  tests.py  views.py
users/: views.py
users/management/commands/: csu.py
